# python-design-patterns

./: README.md  pyproject.toml
Adapter/: mailer.py
Builder/: form_generator.py
Decorator/: profiled_fib.py
Facade/: pos.py  pos_facade.py
Factory/: graphic_base.py  shape_factory.py
Prototype/: prototype.py
Proxy/: proxy.py
Singleton/: singleton.py
